tests/syntax/invalid/all-cap-context.ama
# <input>:1:1 variable name (URL) may not have consecutive uppercase letters
URL.parse("http://example.com", Example)
